# pbg-comets

./: .gitignore  README.md  pyproject.toml
demo/: composite_report.py  demo_report.py  dfba-textbook-demo-report.html  dfba-textbook-with-viz-report.html
pbg_comets/: __init__.py  composites.py  processes.py  types.py  visualizations.py
pbg_comets/composites/: __init__.py  dfba-textbook-demo.composite.yaml  dfba-textbook-with-viz.composite.yaml
tests/: test_composites.py  test_processes.py
